--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Website</title>
-  <link rel="stylesheet" href="hh.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="bg-img">
@@ -74,6 +74,6 @@
     </div>
   </footer>
 
-  <script src="hh.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
