--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
 </div>
   <div class="hero" id="hero">
     <!-- Hero section content goes here -->
+    <div class="poster">
+      <img src="p1.jpg" alt="Poster Image" class="poster-image">
+      <h1>Important Message</h1>
+      <p>This is your important message. Make it impactful!</p>
+    </div>
+    <div class="poster">
+      <img src="p1.jpg" alt="Poster Image" class="poster-image">
+      <h1>Important Message</h1>
+      <p>This is your important message. Make it impactful!</p>
+    </div>
+    <div class="poster">
+      <img src="p1.jpg" alt="Poster Image" class="poster-image">
+      <h1>Important Message</h1>
+      <p>This is your important message. Make it impactful!</p>
+    </div>
   </div>
 
   <div class="content">
