--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
     <!-- Hero section content goes here -->
     <div class="poster">
       <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>Important Message</h1>
+      <h1>CS TOPICS</h1>
       <p>This is your important message. Make it impactful!</p>
     </div>
     <div class="poster">
       <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>Important Message</h1>
+      <h1>NEW TECHNOLOGY</h1>
       <p>This is your important message. Make it impactful!</p>
     </div>
     <div class="poster">
       <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>Important Message</h1>
+      <h1>NOTES</h1>
       <p>This is your important message. Make it impactful!</p>
     </div>
   </div>
