--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="search-icon">Search Icon</div>
     </div>
   </header>
+    <h1>WELCOME TO techAtechnology</h1>
 </div>
   <div class="hero" id="hero">
     <!-- Hero section content goes here -->
