--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <div class="search-icon">Search Icon</div>
     </div>
   </header>
+    <div class="h1">
     <h1>WELCOME TO techAtechnology</h1>
+    </div>
 </div>
   <div class="hero" id="hero">
     <!-- Hero section content goes here -->
