--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <br>
       <br>
       <br>
-    <h1>WELCOME TO techAtechnology</h1>
+      <center>
+    <h1>WELCOME TO techAtechnology</h1></center>
     </div>
 </div>
   <div class="hero" id="hero">
