--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
   <footer>
     <div class="container">
       <div class="footer-content">
-        <h3>Contact Us</h3>
-        <p>123 Street Name, City, Country</p>
-        <p>Email: info@example.com</p>
-        <p>Phone: +1234567890</p>
+        <h3>Contact us</h3>
+        <p>Fire Station Road,KashmirGadda,Karimnagar</p>
+        <p>Email: mohammedshakeeb.ok@gmail.com</p>
+        <p>Phone: +918897151709</p>
       </div>
     </div>
   </footer>
