--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
         Thank you for visiting my website, and I look forward to connecting with you soon!</p>
     </div>
   </div>
-
+<center><a href="ss.html">
+  <button>click</button>
+</a></center>
+  
   <footer>
     <div class="container">
       <div class="footer-content">
