--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>techAtechnology</title>
-  <link rel="stylesheet" href="index.css">
+  <title>Your Website</title>
+  <link rel="stylesheet" href="hh.css">
 </head>
 <body>
   <div class="bg-img">
@@ -23,49 +23,37 @@
       <div class="search-icon">Search Icon</div>
     </div>
   </header>
-    <div class="h1">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <center>
-    <h1>WELCOME TO techAtechnology</h1></center>
-    </div>
 </div>
   <div class="hero" id="hero">
+    <div class="poster">
+      <img src="p1.jpg" alt="Poster Image" class="poster-image">
+      <h1>Important Message</h1>
+      <p>This is your important message. Make it impactful!</p>
+    </div>
+    <div class="poster">
+      <img src="p1.jpg" alt="Poster Image" class="poster-image">
+      <h1>Important Message</h1>
+      <p>This is your important message. Make it impactful!</p>
+    </div>
+    <div class="poster">
+      <img src="p1.jpg" alt="Poster Image" class="poster-image">
+      <h1>Important Message</h1>
+      <p>This is your important message. Make it impactful!</p>
+    </div>
+    <div class="poster">
+      <img src="p1.jpg" alt="Poster Image" class="poster-image">
+      <h1>Important Message</h1>
+      <p>This is your important message. Make it impactful!</p>
+    </div>
     <!-- Hero section content goes here -->
-    <div class="poster">
-      <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>CS TOPICS</h1>
-      <p>This is your important message. Make it impactful!</p>
-    </div>
-    <div class="poster">
-      <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>NEW TECHNOLOGY</h1>
-      <p>This is your important message. Make it impactful!</p>
-    </div>
-    <div class="poster">
-      <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>NOTES</h1>
-      <p>This is your important message. Make it impactful!</p>
-    </div>
   </div>
 
   <div class="content">
     <div class="container">
       <div class="about" id="about">
-        <!-- About section content goes here -->
+       
       </div>
-      <div class="news" id="news">
-        <!-- News section content goes here -->
-      </div>
-      <div class="cs-topics" id="cs-topics">
-        <!-- CS Topics section content goes here -->
-      </div>
-    </div>
-  </div>
+      
 
   <div class="about-us">
     <div class="container">
@@ -87,21 +75,20 @@
         Thank you for visiting my website, and I look forward to connecting with you soon!</p>
     </div>
   </div>
-<center><a href="ss.html">
+<a href="ss.html">
   <button>click</button>
-</a></center>
-  
+</a>
   <footer>
     <div class="container">
       <div class="footer-content">
-        <h3>Contact us</h3>
-        <p>Fire Station Road,KashmirGadda,Karimnagar</p>
-        <p>Email: mohammedshakeeb.ok@gmail.com</p>
-        <p>Phone: +918897151709</p>
+        <h3>Contact Us</h3>
+        <p>123 Street Name, City, Country</p>
+        <p>Email: info@example.com</p>
+        <p>Phone: +1234567890</p>
       </div>
     </div>
   </footer>
 
-  <script src="index.js"></script>
+  <script src="hh.js"></script>
 </body>
 </html>
