--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
   <div class="hero" id="hero">
     <div class="poster">
       <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>Important Message</h1>
+      <h1>CS TOPICS</h1>
       <p>This is your important message. Make it impactful!</p>
     </div>
     <div class="poster">
       <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>Important Message</h1>
+      <h1>NEW TECH</h1>
       <p>This is your important message. Make it impactful!</p>
     </div>
     <div class="poster">
       <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>Important Message</h1>
+      <h1>COLLEGE UPDATES</h1>
       <p>This is your important message. Make it impactful!</p>
     </div>
     <div class="poster">
@@ -81,10 +81,10 @@
   <footer>
     <div class="container">
       <div class="footer-content">
-        <h3>Contact Us</h3>
-        <p>123 Street Name, City, Country</p>
-        <p>Email: info@example.com</p>
-        <p>Phone: +1234567890</p>
+        <h3>Contact Us9</h3>
+        <p>KARIMNAGAR,TELANGANA,INDIA</p>
+        <p>Email: mohammedshakeeb.ok@gmail.com</p>
+        <p>Phone: 8897151709</p>
       </div>
     </div>
   </footer>
