--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Website</title>
+  <title>College Ki Duniya</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -22,6 +22,9 @@
       </nav>
       <div class="search-icon">Search Icon</div>
     </div>
+    <h1>
+      WELCOME TO COLLEGE KI DUNIYAA
+    </h1>
   </header>
 </div>
   <div class="hero" id="hero">
