--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="search-icon">Search Icon</div>
       </div>
     </header> <br><br><br><br><br><br><br><br>
-    <h1>
-        WELCOME TO COLLEGE KI DUNIYAA
+    <h1><center>
+        WELCOME TO COLLEGE KI DUNIYAA</center>
       </h1>
   </div>
   <div class="hero" id="hero">
