--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         <div class="search-icon">Search Icon</div>
       </div>
-    </header> <br><br><br><br><br><br><br><br>
+    </header> <br><br><br><br><br><br><br><br><br><br><br>
     <h1><center>
         WELCOME TO COLLEGE KI DUNIYAA</center>
       </h1>
