--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>College Ki Duniya</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
   <div class="bg-img">
     <header id="header">
@@ -22,32 +27,51 @@
         <div class="search-icon">Search Icon</div>
       </div>
     </header> <br><br><br><br><br><br><br><br><br><br><br>
-    <h1><center>
+    <h1>
+      <center>
         WELCOME TO COLLEGE KI DUNIYAA</center>
-      </h1>
-  </div>
-  <div class="hero" id="hero">
-    <div class="poster">
-      <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>CS TOPICS</h1>
-      <p>This is your important message. Make it impactful!</p>
+    </h1>
+  </div><BR></BR>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="p1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">CS TOPIC</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+            content. This content is a little bit longer.</p>
+        </div>
+      </div>
     </div>
-    <div class="poster">
-      <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>NEW TECH</h1>
-      <p>This is your important message. Make it impactful!</p>
+    <div class="col">
+      <div class="card h-100">
+        <img src="p1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">TECH NEWS</h5>
+          <p class="card-text">This is a short card.</p>
+        </div>
+      </div>
     </div>
-    <div class="poster">
-      <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>COLLEGE UPDATES</h1>
-      <p>This is your important message. Make it impactful!</p>
+    <div class="col">
+      <div class="card h-100">
+        <img src="p1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">NEW TECH</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+            content.</p>
+        </div>
+      </div>
     </div>
-    <div class="poster">
-      <img src="p1.jpg" alt="Poster Image" class="poster-image">
-      <h1>Important Message</h1>
-      <p>This is your important message. Make it impactful!</p>
+    <div class="col">
+      <div class="card h-100">
+        <img src="p1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">COLLEGE</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+            content. This content is a little bit longer.</p>
+        </div>
+      </div>
     </div>
-    <!-- Hero section content goes here -->
   </div>
   <div class="content">
     <div class="container">
@@ -56,13 +80,18 @@
         <div class="container">
           <h2>About Us</h2>
           <p>
-            Hello and welcome to my website! My name is Mohammed Shakeebuddin, and I am thrilled that you have taken the time to visit my little corner of the internet.
+            Hello and welcome to my website! My name is Mohammed Shakeebuddin, and I am thrilled that you have taken the
+            time to visit my little corner of the internet.
 
-            I am a student of computer science with a passion for new technology. I have always been fascinated by upcoming technology, and my work reflects my dedication to exploring the depths of this field.
+            I am a student of computer science with a passion for new technology. I have always been fascinated by
+            upcoming technology, and my work reflects my dedication to exploring the depths of this field.
 
-            When I'm not working, you can usually find me exploring the internet. I love to explore new technology, and I find that these pursuits help me to recharge and stay focused on my goals.
+            When I'm not working, you can usually find me exploring the internet. I love to explore new technology, and
+            I find that these pursuits help me to recharge and stay focused on my goals.
 
-            As you explore my website, you will find information about new technology and computer science. I am always eager to share my knowledge and insights with others, and I hope that you will find my content valuable and informative.
+            As you explore my website, you will find information about new technology and computer science. I am always
+            eager to share my knowledge and insights with others, and I hope that you will find my content valuable and
+            informative.
 
             Thank you for visiting my website, and I look forward to connecting with you soon!
           </p>
@@ -85,4 +114,5 @@
   </footer>
   <script src="index.js"></script>
 </body>
+
 </html>
