--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#about">About Us</a></li>
+            <li><a href="privacy policy.html">privacy policy</a></li>
             <!-- Add more menu items as needed -->
           </ul>
         </nav>
@@ -112,6 +113,9 @@
       </div>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="index.js"></script>
 </body>
 
