--- a/privacy policy.html
+++ b/privacy policy.html
@@ -6,31 +6,30 @@
   <title>Privacy Policy</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="pp.css"> <!-- Your custom CSS if any -->
+  <link rel="stylesheet" href="index.css"> <!-- Your custom CSS if any -->
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">Your Website Name</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <div class="bg-img">
+        <header id="header">
+          <div class="container">
+            <div class="logo">Your Logo</div>
+            <nav>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#news">News</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="privacy policy.html">privacy policy</a></li>
+                <!-- Add more menu items as needed -->
+              </ul>
+            </nav>
+            <div class="search-icon">Search Icon</div>
+          </div>
+        </header> <br><br><br><br><br><br><br><br><br><br><br>
+        <h1>
+          <center>
+            WELCOME TO COLLEGE KI DUNIYAA</center>
+        </h1>
+      </div><BR></BR>
 
   <!-- Privacy Policy Content -->
   <h1>Privacy Policy</h1>
