--- a/privacy policy.html
+++ b/privacy policy.html
@@ -34,7 +34,7 @@
   <!-- Privacy Policy Content -->
   <h1>Privacy Policy</h1>
 
-  <p>This Privacy Policy describes how College Ki Duniys "we" collects, uses, and shares personal information when you use our website collegekiduniya.site.</p>
+  <p>This Privacy Policy describes how College Ki Duniyaa "we" collects, uses, and shares personal information when you use our website collegekiduniya.site.</p>
 
   <h2>Information We Collect</h2>
 
