--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="privacy policy.html">privacy policy</a></li>
+            <li><a href="privacy-policy.html">privacy policy</a></li>
             <!-- Add more menu items as needed -->
           </ul>
         </nav>
