--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy</title>
+  <title>Privacy Policy - College Ki Duniya</title>
+  <!-- Meta tags for SEO -->
+  <meta name="description" content="Learn about how we collect, use, and protect your personal information with our Privacy Policy."/>
+  <meta name="keywords" content="privacy policy, data protection, personal information, online privacy"/>
+  <meta name="author" content="College Ki Duniya"/>
+  <!-- Canonical link for SEO -->
+  <link rel="canonical" href="https://collegekiduniya.site/privacy-policy"/>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="index.css"> <!-- Your custom CSS if any -->
@@ -18,7 +24,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#news">News</a></li>
                 <li><a href="#about">About Us</a></li>
-                <li><a href="privacy policy.html">privacy policy</a></li>
+                <li><a href="privacy-policy.html">privacy policy</a></li>
                 <!-- Add more menu items as needed -->
               </ul>
             </nav>
@@ -32,9 +38,12 @@
       </div><BR></BR>
 
   <!-- Privacy Policy Content -->
-  <h1>Privacy Policy</h1>
+  <div class="container mt-4">
+    <h1>Privacy Policy</h1>
+    <!-- Privacy Policy content goes here -->
+  </div>
 
-  <p>This Privacy Policy describes how College Ki Duniyaa "we" collects, uses, and shares personal information when you use our website collegekiduniya.site.</p>
+  <p>This Privacy Policy describes how College Ki Duniys "we" collects, uses, and shares personal information when you use our website collegekiduniya.site.</p>
 
   <h2>Information We Collect</h2>
 
@@ -95,6 +104,10 @@
       </div>
     </div>
   </footer>
-  <script src="index.js"></script> <!-- Your custom JavaScript if any -->
+  <!-- Bootstrap JS and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="script.js"></script> <!-- Your custom JavaScript if any -->
 </body>
 </html>
