--- a/index.html
+++ b/index.html
@@ -14,20 +14,34 @@
 <body>
   <div class="bg-img">
     <header id="header">
-      <div class="container">
-        <div class="logo">Your Logo</div>
-        <nav>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="privacy-policy.html">privacy policy</a></li>
-            <!-- Add more menu items as needed -->
-          </ul>
-        </nav>
-        <div class="search-icon">Search Icon</div>
-      </div>
-    </header> <br><br><br><br><br><br><br><br><br><br><br>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <div class="logo">Your Logo</div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#news">News</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="privacy-policy.html">Privacy Policy</a>
+              </li>
+              <!-- Add more menu items as needed -->
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <br><br><br><br><br><br><br><br><br><br><br>
     <h1>
       <center>
         WELCOME TO COLLEGE KI DUNIYAA</center>
