--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <link rel="stylesheet" href="index.css">
+  <style>
+    /* Add custom CSS here if needed */
+  </style>
 </head>
 
 <body>
@@ -16,7 +19,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <div class="logo">Your Logo</div>
+          <a class="navbar-brand" href="#">Your Logo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
