--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#home">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#news">News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About Us</a>
+                <a class="nav-link" href="team.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="privacy-policy.html">Privacy Policy</a>
