--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,22 +15,35 @@
   <link rel="stylesheet" href="index.css"> <!-- Your custom CSS if any -->
 </head>
 <body>
-    <div class="bg-img">
-        <header id="header">
-          <div class="container">
-            <div class="logo">Your Logo</div>
-            <nav>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="privacy-policy.html">privacy policy</a></li>
-                <!-- Add more menu items as needed -->
-              </ul>
-            </nav>
-            <div class="search-icon">Search Icon</div>
+  <div class="bg-img">
+    <header id="header">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">Your Logo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#news">News</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="team.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="privacy-policy.html">Privacy Policy</a>
+              </li>
+              <!-- Add more menu items as needed -->
+            </ul>
           </div>
-        </header> <br><br><br><br><br><br><br><br><br><br><br>
+        </div>
+      </nav>
+    </header> <br><br><br><br><br><br><br><br><br><br><br>
         <h1>
           <center>
             WELCOME TO COLLEGE KI DUNIYAA</center>
