--- a/team.html
+++ b/team.html
@@ -79,9 +79,11 @@
         Our passion for innovation drives us to continuously seek out new developments and share our findings with you.
         Let us introduce our talented team members:
        <br>
-       <b> Adnan - Content Writers: </b>Adnan are the creative minds behind our engaging articles and informative content. 
-       They research and write about the most exciting topics in the tech world, 
-       keeping you up-to-date with the latest trends and breakthroughs.
+       <b> Adnan - Content Writer: Adnan is the creative mind behind our engaging articles and informative content. 
+         
+         He researches and writes about the most exciting topics in the tech world, 
+         
+         keeping you up-to-date with the latest trends and breakthroughs.
        <br>
         <b>Ahmed -  Graphic Designer:</b> 
         Ahmed brings a touch of artistic flair to our visuals as our graphic designer. 
