--- a/team.html
+++ b/team.html
@@ -79,7 +79,7 @@
         Our passion for innovation drives us to continuously seek out new developments and share our findings with you.
         Let us introduce our talented team members:
        <br>
-       <b> Adnan - Content Writer: Adnan is the creative mind behind our engaging articles and informative content. 
+       <b> Adnan - Content Writer:</b> Adnan is the creative mind behind our engaging articles and informative content. 
          
          He researches and writes about the most exciting topics in the tech world, 
          
