--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-         <!-- <a class="navbar-brand" href="#">Your Logo</a> -->
+        <a class="navbar-brand" href="index.html">COLLEGE KI DUNIYA</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
