--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-        <a class="navbar-brand" href="index.html">COLLEGE KI DUNIYA</a>
+          <a class="navbar-brand" href="index.html">COLLEGE KI DUNIYA</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
       <div class="card h-100">
         <img src="p1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">CS TOPIC</h5>
+          <h5 class="card-title"><a href="cs-topic.html">CS TOPIC</a></h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
             content. This content is a little bit longer.</p>
         </div>
