--- a/team.html
+++ b/team.html
@@ -79,13 +79,13 @@
         Our passion for innovation drives us to continuously seek out new developments and share our findings with you.
         Let us introduce our talented team members:
        <br>
-       <b> Adnan - Content Writer:</b> Adnan is the creative mind behind our engaging articles and informative content. 
+       <b> Mohammad Adnan Sayeed - Content Writer:</b> Adnan is the creative mind behind our engaging articles and informative content. 
          
          He researches and writes about the most exciting topics in the tech world, 
          
          keeping you up-to-date with the latest trends and breakthroughs.
        <br>
-        <b>Ahmed -  Graphic Designer:</b> 
+        <b>Mohammad Ahmed Khan -  Graphic Designer:</b> 
         Ahmed brings a touch of artistic flair to our visuals as our graphic designer. 
         With an eye for detail and creativity, he ensures that our website and materials are visually appealing and captivating
         <br>
