--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
             Thank you for visiting my website, and I look forward to connecting with you soon!
           </p>
         
-    <h2>INTRODUSING MY TEAM</h2>
+    <h2>INTRODUCING MY TEAM</h2>
     <P>
 
        <b> Meet Our Team:</b>
@@ -92,7 +92,7 @@
 
 
 
-        Together, we form a dynamic team with a diverse range of skills and expertise. Whether we're researching new technologies, designing user-friendly interfaces, optimizing database systems, or connecting with others in the tech community, our goal remains the same: to share our passion for innovation and discovery with you. Join us as we delve deeper into the world of technology and embark on this exciting journey together!  </div>
+        Together, we form a dynamic team with a diverse range of skills and expertise. Whether we're researching new technologies, designing user-friendly interfaces, optimizing database systems, or connecting with others in the tech community, our goal remains the same: to share our passion for innovation and discovery with you. Join us as  into the world of technology and embark on this exciting journey together!  </div>
   <footer>
     <div class="container">
       <div class="footer-content">
