--- a/cs-topic.html
+++ b/cs-topic.html
@@ -71,7 +71,7 @@
             <h5>
                <b> Devin: The AI Partner Transforming Software Engineering</b></h5>
             <p>
-              <a href="#" class="icon-link mr-3"><i class="fa fa-pencil-square-o"></i>Mohammad Adnan Sayeed</a>
+              <a href="https://www.linkedin.com/in/mohammad-adnan-sayeed-82a677274?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="icon-link mr-3"><i class="fa fa-pencil-square-o"></i>Mohammad Adnan Sayeed</a>
               <a href="#" class="icon-link"><i class="fa fa-comments-o"></i></a>
             </p>
             <div class="readmore js-read-more" data-rm-words="70">
