--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container">
           <h2>About Us</h2>
           <p>
-            Hello and welcome to my website! My name is Mohammed Shakeebuddin, and I am thrilled that you have taken the
+            Hello and welcome to my website! My name is <a href="https://www.linkedin.com/in/mohammed-shakeebuddin-5b3a6b1b1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Mohammed Shakeebuddin</a>, and I am thrilled that you have taken the
             time to visit my little corner of the internet.
 
             I am a student of computer science with a passion for new technology. I have always been fascinated by
