--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <meta name="google-site-verification" content="zaeYtwZqHtNuTsDQOszuKv_8y7eOIt2WmJq80wF3r10" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>College Ki Duniya</title>
@@ -10,9 +9,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <link rel="stylesheet" href="index.css">
-  <style>
-    /* Add custom CSS here if needed */
-  </style>
+  
 </head>
 
 <body>
@@ -35,6 +32,15 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="team.html">About Us</a>
+                <ul class="sub-menu">
+                  <li class="nav-item">
+                    <a class="nav-link" href="team.html">Our Team</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="mission.html">Our Mission</a>
+                  </li>
+                  <!-- Add more sub-menu items as needed -->
+                </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="privacy-policy.html">Privacy Policy</a>
@@ -99,7 +105,7 @@
         <div class="container">
           <h2>About Us</h2>
           <p>
-            Hello and welcome to my website! My name is <a href="https://www.linkedin.com/in/mohammed-shakeebuddin-5b3a6b1b1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Mohammed Shakeebuddin</a>, and I am thrilled that you have taken the
+            Hello and welcome to my website! My name is Mohammed Shakeebuddin, and I am thrilled that you have taken the
             time to visit my little corner of the internet.
 
             I am a student of computer science with a passion for new technology. I have always been fascinated by
@@ -127,14 +133,14 @@
         <h3>Contact Us</h3>
         <p>KARIMNAGAR, TELANGANA, INDIA</p>
         <p>Email: mohammedshakeeb.ok@gmail.com</p>
-        <p>Phone: 8897151709</p>
+        <p>Phone: 8897151709
+        </div>
       </div>
-    </div>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="index.js"></script>
-</body>
-
-</html>
+    </footer>
+          <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+          <script src="index.js"></script>
+        </body>
+        
+        </html>
