--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <a class="nav-link" href="team.html">About Us</a>
                 <ul class="sub-menu">
                   <li class="nav-item">
-                    <a class="nav-link" href="team.html">Our Team</a>
+                    <a class="nav-link" href="about1.html">About me</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="mission.html">Our Mission</a>
+                    <a class="nav-link" href="team.html">Our Team</a>
                   </li>
                   <!-- Add more sub-menu items as needed -->
                 </ul>
