--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="#news">News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="team.html">About Us</a>
+                <a class="nav-link" href="">About Us</a>
                 <ul class="sub-menu">
                   <li class="nav-item">
                     <a class="nav-link" href="about1.html">About me</a>
