--- a/about1.html
+++ b/about1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="mohammed shakeeb" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - College Ki Duniya</title>
   <!-- Meta tags for SEO -->
   <meta name="description" content="Learn about how we collect, use, and protect your personal information with our Privacy Policy."/>
