--- a/about1.html
+++ b/about1.html
@@ -56,7 +56,7 @@
         </div>
         <div class="about">
             <h2>About Me</h2>
-            <p>Hello and welcome to my website! My name is Mohammed Shakeebuddin, and I am thrilled that you have taken the
+            <p>Hello and welcome to my website! My name is <a href="https://in.linkedin.com/in/shakeeb-uddin-5b3a6b1b1"> Mohammed Shakeebuddin</a>, and I am thrilled that you have taken the
                 time to visit my little corner of the internet.
     
                 I am a student of computer science with a passion for new technology. I have always been fascinated by
