--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h3>Contact Us</h3>
         <p>KARIMNAGAR, TELANGANA, INDIA</p>
         <p>Email: mohammedshakeeb.ok@gmail.com</p>
-        <p>Phone: 8897151709
+        <p>Phone: +91 8897151709
         </div>
       </div>
     </footer>
