--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
   <!-- Hero Section -->
   <section class="hero bg-img" aria-label="Welcome Section">
     <div class="hero-content">
-      <h1 class="display-4 text-center">Welcome to Tech A Technology</h1>
+      <h1 class="display-4 text-center">
+        <br><br><br><br><br><br>Welcome to Tech A Technology</h1>
       <p class="lead text-center">Exploring the Future of Technology & Computer Science</p>
     </div>
   </section>
