--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <section class="hero bg-img" aria-label="Welcome Section">
     <div class="hero-content">
       <h1 class="display-4 text-center">
-        <br><br><br><br><br><br>Welcome to Tech A Technology</h1>
+        <br><br><br><br>Welcome to Tech A Technology</h1>
       <p class="lead text-center">Exploring the Future of Technology & Computer Science</p>
     </div>
   </section>
